富文本编辑器得能显示才行

--- a/main/templates/main/news_detail.html
+++ b/main/templates/main/news_detail.html
@@ -3,5 +3,5 @@
 <h1>news detail</h1>
 <h4>{{news.title}}</h4>
 <b>{{news.desc}}</b>
-<p>{{news.content}}</p>
+<p>{{news.content|safe}}</p>
 {% endblock%}
