--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,4 @@
 {% extends "main/_base.html" %}
 {% block page_content %}
-<h1>this is tangbofu home!</h1>
+<h1>This is tangbofu home...</h1>
 {% endblock%}
