--- a/main/templates/main/_nav.html
+++ b/main/templates/main/_nav.html
@@ -1,5 +1,5 @@
-<div id="top-header">
-    <ul>
+<nav id="menu">
+    <ul class="nav nav-tabs" role="tablist">
         <li><a href="/">home</a></li>
         <li><a href="/news_detail/1">news detail</a></li>
         <li><a href="/news_list/1">news list</a></li>
@@ -8,4 +8,5 @@
         <li><a href="/contact_us">contact_us</a></li>
         <li><a href="/send_email">send_email</a></li>
     </ul>
-</div>
+    
+</nav>
