--- a/main/static/main/scss/_common.scss
+++ b/main/static/main/scss/_common.scss
@@ -2,13 +2,33 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-family: "Microsoft Yahei","Helvetica Neue",Helvetica,"Hiragino Sans GB","Segoe UI",Tahoma,Arial,STHeiti,sans-serif !important;
+    font-family: 'Hiragino Sans GB', 'STHeiti', 'Microsoft Yahei', sans-serif !important;
 }
+
+ul,li {
+    margin: 0;
+    padding: 0;
+}
+li {
+    list-style-type: none;
+}
+
+a {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+$red: #C1272D;
+$blue: rgb(34,62,113);
+$purple: rgb(75,16,64);
+$yellow: rgb(181,168,47);
+$green: rgb(108,108,75);
 .fullscreen {
     position: relative;
     width: 100%;
     height: 100%;
 }
 .centered {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
