--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,16 +1,15 @@
-{% extends "main/_base.html" %}
-{% load staticfiles %}
+{% extends "main/_base.html" %} 
+{% load staticfiles %} 
 {% block page_content %}
-
 <div id="homepage-banner" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item  active" style="background-image: url({% static 'main/img/bkg_01.jpg' %});"></div>
-    <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_02.jpg' %});"></div>
-    <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_03.jpg' %});"></div>
-    <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_04.jpg' %});"></div>
-  </div>
-  <img style="position: absolute; bottom: 50px;" src="{% static 'main/img/wide_title.png' %}" alt="">
-  <img style="position: absolute; bottom: 20px;" src="{% static 'main/img/wide_subtitle.png' %}" alt="">
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item  active" style="background-image: url({% static 'main/img/bkg_01.jpg' %});"></div>
+        <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_02.jpg' %});"></div>
+        <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_03.jpg' %});"></div>
+        <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_04.jpg' %});"></div>
+    </div>
+    <img style="position: absolute; bottom: 50px;" src="{% static 'main/img/wide_title.png' %}" alt="">
+    <img style="position: absolute; bottom: 20px;" src="{% static 'main/img/wide_subtitle.png' %}" alt="">
 </div>
 <nav id="menu" class="navbar navbar-default" role="navigation">
     <ul class="nav nav-pills" role="tablist">
@@ -97,28 +96,27 @@
         <img src="{% static 'main/img/module/mote1.jpg'%}" alt="">
     </div>
 </div>
-{% include 'main/_footer.html' %}
-{% endblock%}
-
-{% block js %}
+{% include 'main/_footer.html' %} {% endblock%} {% block js %}
 <script>
 $('.carousel').carousel({
     interval: 3000,
     wrap: true
 });
+
 function resize() {
     $("body").height($(window).height());
     $("#homepage-banner .carousel-inner").height($("body").height());
 
-    
+
 }
-$(function(){
+$(function() {
     resize();
-    setInterval(resize,500);
+    setInterval(resize, 500);
 });
+
 function bodyScroll() {
     var scrollTop = $(window).scrollTop();
-    if (scrollTop >= $('#homepage-banner').offset().top+$('#homepage-banner').height()) {
+    if (scrollTop >= $('#homepage-banner').offset().top + $('#homepage-banner').height()) {
         $('#menu').addClass('fix');
     } else {
         $('#menu').removeClass('fix');
