改造图文样式。

--- a/main/templates/main/_footer.html
+++ b/main/templates/main/_footer.html
@@ -1,5 +1,16 @@
+{% load staticfiles %}
 <footer>
-<p>
-this is footer
-</p>
+    <div class="title">
+        <img src="{% static 'main/img/tangbofu_title.png'%}" alt="">
+        <div class="band left red"></div>
+        <div class="band right red"></div>
+        <p class="red">联系我们</p>
+    </div>
+    <div class="text-block">
+        <p>Email: contact@adobe.com</p>
+        <p>QQ: 8888888</p>
+        <p>电话: 8888888</p>
+        <p>地址: 北京市朝阳区杨闸环岛东北角</p>
+        <p>微信: xxx</p>
+    </div>
 </footer>
