--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -3,7 +3,8 @@
 {% block page_content %}
 <div id="homepage-banner" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item  active" style="background-image: url({% static 'main/img/bkg_01.jpg' %});"></div>
+        <div class="carousel-item  active" style="background-image: url({% static 'main/img/bkg_00.jpg' %});"></div>
+        <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_01.jpg' %});"></div>
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_02.jpg' %});"></div>
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_03.jpg' %});"></div>
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_04.jpg' %});"></div>
@@ -37,7 +38,14 @@
         <img src="{% static 'main/img/banner/yingshi.png'%}" alt="">
     </div>
     <div class="text-block yingshi">
-        <img src="{% static 'main/img/module/yingshi1.jpg'%}" alt="">
+        <div class="img-frame">
+            <img src="{% static 'main/img/module/yingshi1.jpg'%}" alt="">
+        </div>
+        <p>2014年上海电影节获奖投资</p>
+        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
+        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
+        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
+        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
     </div>
 </div>
 <div class="page" id="hongjiu">
@@ -51,7 +59,14 @@
         <img src="{% static 'main/img/banner/hongjiu.png'%}" alt="">
     </div>
     <div class="text-block hongjiu">
-        <img src="{% static 'main/img/module/hongjiu1.jpg'%}" alt="">
+        <div class="img-frame">
+            <img src="{% static 'main/img/module/hongjiu1.jpg'%}" alt="">
+        </div>
+        <p>2014年上海电影节获奖投资</p>
+        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
+        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
+        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
+        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
     </div>
 </div>
 <div class="page" id="yangsheng">
@@ -65,7 +80,14 @@
         <img src="{% static 'main/img/banner/yangsheng.png'%}" alt="">
     </div>
     <div class="text-block yangsheng">
-        <img src="{% static 'main/img/module/yangsheng1.jpg'%}" alt="">
+        <div class="img-frame">
+            <img src="{% static 'main/img/module/yangsheng1.jpg'%}" alt="">
+        </div>
+        <p>2014年上海电影节获奖投资</p>
+        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
+        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
+        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
+        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
     </div>
 </div>
 <div class="page" id="chenxiang">
@@ -79,7 +101,14 @@
         <img src="{% static 'main/img/banner/chenxiang.png'%}" alt="">
     </div>
     <div class="text-block chenxiang center">
-        <img src="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
+        <div class="img-frame">
+            <img src="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
+        </div>
+        <p>2014年上海电影节获奖投资</p>
+        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
+        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
+        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
+        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
     </div>
 </div>
 <div class="page" id="mote">
@@ -93,10 +122,21 @@
         <img src="{% static 'main/img/banner/mote.png'%}" alt="">
     </div>
     <div class="text-block mote">
-        <img src="{% static 'main/img/module/mote1.jpg'%}" alt="">
+        <div class="img-frame">
+            <img src="{% static 'main/img/module/mote1.jpg'%}" alt="">
+            <img src="{% static 'main/img/module/mote2.jpg'%}" alt="">
+        </div>
+        <p>2014年上海电影节获奖投资</p>
+        <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
+        <p>著名韩国导演， 中国新生代制片人的加盟，进一步促进我公司影业的未来发展。众多男模、女模的签约更使锦上添花。</p>
+        <p>也因此2014年上海电影节我公司推出《青春》剧荣获最佳美术奖、最具潜力奖。</p>
+        <p>2015年又一新作投巨资1.8亿，即将梦幻上演......</p>
     </div>
 </div>
-{% include 'main/_footer.html' %} {% endblock%} {% block js %}
+{% include 'main/_footer.html' %} 
+{% endblock page_content%} 
+
+{% block js %}
 <script>
 $('.carousel').carousel({
     interval: 3000,
@@ -124,4 +164,4 @@ function bodyScroll() {
 }
 $(window).scroll(bodyScroll);
 </script>
-{% endblock%}
+{% endblock js %}
