--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -153,14 +153,22 @@ a {
   margin-left: auto;
   margin-right: auto;
   padding: 15px;
-  min-height: 400px; }
+  min-height: 400px;
+  color: white; }
+  .text-block .img-frame {
+    margin-bottom: 20px;
+    display: flex; }
   .text-block img {
-    display: block;
+    float: left;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
-    box-shadow: 0 0 2px gray;
-    border: 3px solid white; }
+    max-width: 50%; }
+
+footer .text-block {
+  margin-top: 150px;
+  color: #666666;
+  margin-left: 40%;
+  font-size: 1.2em; }
 
 .yangsheng {
   background: url(./../img/tile/yangsheng.png) repeat left top; }
