--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -160,14 +160,23 @@
     margin-right: auto;
     padding: 15px;
     min-height: 400px;
+    color: white;
+    .img-frame {
+        margin-bottom: 20px;
+        display: flex;
+    }
     img {
-        display: block;
+        float: left;
         margin-left: auto;
         margin-right: auto;
-        max-width: 100%;
-        box-shadow: 0 0 2px gray;
-        border: 3px solid white;
+        max-width: 50%;
     }
+}
+footer .text-block {
+    margin-top: 150px;
+    color: #666666;
+    margin-left: 40%;
+    font-size: 1.2em;
 }
 .yangsheng {
     background: url(./../img/tile/yangsheng.png) repeat left top;
