--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,8 +9,8 @@
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_03.jpg' %});"></div>
         <div class="carousel-item" style="background-image: url({% static 'main/img/bkg_04.jpg' %});"></div>
     </div>
-    <img style="position: absolute; bottom: 50px;" src="{% static 'main/img/wide_title.png' %}" alt="">
-    <img style="position: absolute; bottom: 20px;" src="{% static 'main/img/wide_subtitle.png' %}" alt="">
+    <img style="bottom: 50px;" src="{% static 'main/img/title.png' %}" alt="">
+    <img style="bottom: 20px;" src="{% static 'main/img/subtitle.png' %}" alt="">
 </div>
 <nav id="menu" class="navbar navbar-default" role="navigation">
     <ul class="nav nav-pills" role="tablist">
