--- a/main/static/main/scss/main.scss
+++ b/main/static/main/scss/main.scss
@@ -21,6 +21,15 @@
         position: absolute;
         z-index: 100;
         max-width: 100%;
+        right: 10%;
+        bottom: 10%;
+    }
+}
+@media (max-width:720px) {
+    #homepage-banner {
+        img {
+            right: 0;
+        }
     }
 }
 #menu {
@@ -176,9 +185,19 @@
         max-width: 100%;
     }
 }
+footer .text-block {
+    padding-top: 150px;
+    padding-bottom: 50px;
+    p {
+        color: #666666;
+    }
+    
+    padding-left: 20%;
+    font-size: 1.2em;
+}
 @media (max-width:720px) {
     .banner {
-        width: 100%;
+        max-width: 100%;
         img {
             display: block;
             margin-left: auto;
@@ -188,13 +207,12 @@
         border-bottom: 1px solid white;
     }
     .text-block {
-        width: 100%;
-        padding: 15px;
+        max-width: 100%;
+        padding: 0;
         min-height: 600px;
         color: white;
         .img-frame {
             margin-bottom: 20px;
-            display: flex;
         }
         img {
             float: left;
@@ -203,16 +221,19 @@
             max-width: 100%;
         }
     }
-}
-footer .text-block {
-    margin-top: 150px;
-    p {
-        color: #666666;
+    footer .text-block {
+        padding-top: 50px;
+        padding-bottom: 0;
+        p {
+            padding: 0px;
+            color: #666666;
+        }
+        min-height: 500px;
+        padding-left: 20%;
+        font-size: 1em;
     }
-    
-    margin-left: 40%;
-    font-size: 1.2em;
 }
+
 .yangsheng {
     background: url(./../img/tile/yangsheng.png) repeat left top;
 }
