--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -34,7 +34,7 @@
         <div class="band right blue"></div>
         <p class="blue">京城高端私人会所 —— <b>影视</b></p>
     </div>
-    <div class="banner">
+    <div class="banner yingshi">
         <img src="{% static 'main/img/banner/yingshi.png'%}" alt="">
     </div>
     <div class="text-block yingshi">
@@ -55,7 +55,7 @@
         <div class="band right purple"></div>
         <p class="purple">京城高端私人会所 —— <b>红酒</b></p>
     </div>
-    <div class="banner">
+    <div class="banner hongjiu">
         <img src="{% static 'main/img/banner/hongjiu.png'%}" alt="">
     </div>
     <div class="text-block hongjiu">
@@ -76,7 +76,7 @@
         <div class="band right yellow"></div>
         <p class="yellow">京城高端私人会所 —— <b>养生</b></p>
     </div>
-    <div class="banner">
+    <div class="banner yangsheng">
         <img src="{% static 'main/img/banner/yangsheng.png'%}" alt="">
     </div>
     <div class="text-block yangsheng">
@@ -97,10 +97,10 @@
         <div class="band right green"></div>
         <p class="green">京城高端私人会所 —— <b>沉香</b></p>
     </div>
-    <div class="banner center">
+    <div class="banner chenxiang">
         <img src="{% static 'main/img/banner/chenxiang.png'%}" alt="">
     </div>
-    <div class="text-block chenxiang center">
+    <div class="text-block chenxiang">
         <div class="img-frame">
             <img src="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
         </div>
@@ -118,7 +118,7 @@
         <div class="band right red"></div>
         <p class="red">京城高端私人会所 —— <b>模特</b></p>
     </div>
-    <div class="banner">
+    <div class="banner mote">
         <img src="{% static 'main/img/banner/mote.png'%}" alt="">
     </div>
     <div class="text-block mote">
