--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -143,7 +143,7 @@ a {
   overflow: hidden; }
 
 .banner {
-  width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   border-bottom: 1px solid white; }
@@ -153,15 +153,37 @@ a {
     margin-right: auto;
     max-width: 100%; }
 
+.banner.yingshi {
+  background: url(./../img/banner/bg_yingshi.png) repeat left top; }
+
+.banner.hongjiu {
+  background: url(./../img/banner/bg_hongjiu.png) repeat left top; }
+
+.banner.mote {
+  background: url(./../img/banner/bg_mote.png) repeat left top; }
+
+.banner.yangsheng {
+  background: url(./../img/banner/bg_yangsheng.png) repeat left top; }
+
+.banner.chenxiang {
+  background: url(./../img/banner/bg_chenxiang.png) repeat left top; }
+
 .text-block {
-  width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  min-height: 400px; }
+  min-height: 400px;
+  padding-bottom: 2em; }
   .text-block .img-frame {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
     overflow: hidden; }
   .text-block p {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 15px;
     color: white; }
   .text-block img {
@@ -173,14 +195,16 @@ a {
 footer .text-block {
   padding-top: 150px;
   padding-bottom: 50px;
-  padding-left: 20%;
   font-size: 1.2em; }
   footer .text-block p {
-    color: #666666; }
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #666666;
+    padding-left: 20%; }
 
 @media (max-width: 720px) {
   .banner {
-    max-width: 100%;
     border-bottom: 1px solid white; }
     .banner img {
       display: block;
@@ -189,12 +213,14 @@ footer .text-block {
       max-width: 100%; }
 
   .text-block {
-    max-width: 100%;
     padding: 0;
     min-height: 600px;
     color: white; }
     .text-block .img-frame {
+      max-width: 100%;
       margin-bottom: 20px; }
+    .text-block p {
+      max-width: 100%; }
     .text-block img {
       float: left;
       margin-left: auto;
