图片要好看

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -40,6 +40,7 @@
     <div class="text-block yingshi">
         <div class="img-frame">
             <img src="{% static 'main/img/module/yingshi1.jpg'%}" alt="">
+            <img src="{% static 'main/img/module/yingshi2.jpg'%}" alt="">
         </div>
         <p>2014年上海电影节获奖投资</p>
         <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
@@ -61,6 +62,7 @@
     <div class="text-block hongjiu">
         <div class="img-frame">
             <img src="{% static 'main/img/module/hongjiu1.jpg'%}" alt="">
+            <img src="{% static 'main/img/module/hongjiu2.jpg'%}" alt="">
         </div>
         <p>2014年上海电影节获奖投资</p>
         <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
@@ -81,7 +83,8 @@
     </div>
     <div class="text-block yangsheng">
         <div class="img-frame">
-            <img src="{% static 'main/img/module/yangsheng1.jpg'%}" alt="">
+            <img src="{% static 'main/img/module/chadao1.jpg'%}" alt="">
+            <img src="{% static 'main/img/module/chadao2.jpg'%}" alt="">
         </div>
         <p>2014年上海电影节获奖投资</p>
         <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
@@ -103,6 +106,7 @@
     <div class="text-block chenxiang">
         <div class="img-frame">
             <img src="{% static 'main/img/module/chenxiang1.jpg'%}" alt="">
+            <img src="{% static 'main/img/module/chenxiang2.jpg'%}" alt="">
         </div>
         <p>2014年上海电影节获奖投资</p>
         <p>传媒是我们集团旗下一项重要产业，我公司助导多部著名电影和多部青春影视。</p>
